# CoordiBot

./: .gitignore  CMakeLists.txt  Makefile  README.md
bitmaps/: vertices.csv  vertices.xls
config/: empty.cfg  empty.world  main.cfg  main.world  map.inc  robot.inc
include/: constants.h  graph.h  robot.h  server.h  utils.h
src/: Makefile  graph.cpp  graph.h  main.cpp  robot.cpp  server.cpp  utils.cpp  vertices.csv
